
syntax = "proto3";
package register;
option go_package = "egnite.app/microservices/authentication/proto/register";

import "google/api/annotations.proto";

message RegisterRequest {
  string name = 1;
  string phone = 2;
  string email = 3;
  string username = 4;
  string password = 5;
  string role = 6;
  bytes createdAt = 7;
}

message RegisterResponse {
  string accessToken = 1;
  string id = 2;
  bool success = 3;
  string err = 4;
}

service RegisterService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/register"
      body: "*"
    };
  }
}